hphp/hack/test/typecheck/dict_literal_mixed_brace2.php
<?hh // partial

function foo(): dict<string, int> {
  $x = dict{'a' => 2, 'b' => 5];
  return $x;
}
